# cpp-grpc-auto-gen

./: README.md  cpp-grpc-auto-gen.py  proto.yaml  proto2yaml.py  requirements.txt
.github/workflows/: rockylinux8-gcc13.yaml
example/: CMakeLists.txt  example.proto
example/cmake/: grpc.cmake
example/include/: grpc_server.hpp  pubsub_service.hpp
example/src/: client.cpp  server.cpp
example_project/: xmake.lua
example_project/include/: grpc_client.hpp  grpc_server.hpp
example_project/src/: example_client.cpp  server.cpp
template/: client.cpp.j2  grpc_client.hpp.j2  grpc_server.hpp.j2  grpc_server.j2  main.cpp.j2  server.cpp.j2  xmake.j2
